--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -443,10 +443,10 @@ ggPlotW2W(tra.w2s |> dplyr::filter(!is.na(Arm))) + facet_wrap(~dist) +
   ggtitle("Width of the target and query translocated regions")
 
 ggPlotW2W(tra2.w2s |> dplyr::filter(!is.na(Arm))) + facet_wrap(~pair) +
-  ggtitle("Width of the target and query translocated regions")
+  ggtitle("Width of the target and query translocated regions (after removal)")
 
 ggPlotW2W(tra2.w2s |> dplyr::filter(!is.na(Arm))) + facet_wrap(~dist) +
-  ggtitle("Width of the target and query translocated regions")
+  ggtitle("Width of the target and query translocated regions (after removal)")
 
 ggPlotW2W(gbs.w2w) +
   facet_wrap(~query.rep + target.rep) +
