More compact summary

--- a/vignettes/Inversions.Rmd
+++ b/vignettes/Inversions.Rmd
@@ -50,7 +50,8 @@ and `?GenomicBreaks::flagInversions`
 More inversions are found after coalescing colinear blocks because of situations
 where `+ - +` was `+ - - +` before collapsing.
 
-The number of detected inversions is further increased after double-coalescing.
+The number of detected inversions is further increased after double-coalescing,
+but not much.
 
 ```{r detect_trivial_invertions}
 (invs_summary <- data.frame(
@@ -63,12 +64,20 @@ sapply(invs_summary, \(x) tapply(x, row.names(invs_summary) |> OikScrambling:::c
 sapply(invs_summary, \(x) tapply(x, row.names(invs_summary) |> OikScrambling:::compDistance(), median))
 sapply(invs_summary, \(x) tapply(x, row.names(invs_summary) |> OikScrambling:::compDistance(), sd))
 
-invs_summary$pairname  <- OikScrambling:::compDistance(rownames(invs_summary))
-invs_summary$target    <- sub("_.*", "", rownames(invs_summary))
+invs_summary$pairname   <- OikScrambling:::compDistance(rownames(invs_summary))
+invs_summary$pairname_s <- OikScrambling:::compDistance(rownames(invs_summary), short = TRUE)
+invs_summary$class      <- OikScrambling:::compDistClass(rownames(invs_summary))
+invs_summary$target     <- sub("_.*", "", rownames(invs_summary))
+invs_summary <- invs_summary[invs_summary$class != "Int/Rob – Oki",]
 
 ggplot(invs_summary |> tidyr::pivot_longer(c("align", "mapped", "map2"))) +
-  aes(value, name) + geom_point(aes(col = pairname, pch = target)) +
-  ggtitle ("Number of inversions found after different post-processings")
+  aes(value, pairname_s) + geom_point(aes(col = target)) +
+  ggtitle ("Number of inversions found after different post-processings") +
+  facet_wrap(~name, ncol= 1)
+
+ggplot(invs_summary |> tidyr::pivot_longer(c("mapped"))) +
+  aes(value, pairname_s) + geom_point(aes(col = class)) +
+  ggtitle ("Number of inversions found in mapped regions") 
 ```
 
 ## Motif search
