--- a/vignettes/Inversions.Rmd
+++ b/vignettes/Inversions.Rmd
@@ -53,7 +53,7 @@ where `+ - +` was `+ - - +` before collapsing.
 The number of detected inversions is further increased after double-coalescing,
 but not much.
 
-```{r detect_trivial_invertions}
+```{r detect_trivial_invertions, fig.width=8, fig.height=6}
 (invs_summary <- data.frame(
   align  = sapply(gbs,  function(gb) sum(flagInversions(gb)$inv)),
   mapped = sapply(coa,  function(gb) sum(flagInversions(gb)$inv)),
@@ -66,6 +66,7 @@ sapply(invs_summary, \(x) tapply(x, row.names(invs_summary) |> OikScrambling:::c
 
 invs_summary$pairname   <- OikScrambling:::compDistance(rownames(invs_summary))
 invs_summary$pairname_s <- OikScrambling:::compDistance(rownames(invs_summary), short = TRUE)
+invs_summary$genus      <- OikScrambling:::compGenus(rownames(invs_summary))
 invs_summary$class      <- OikScrambling:::compDistClass(rownames(invs_summary))
 invs_summary$target     <- sub("_.*", "", rownames(invs_summary))
 invs_summary <- invs_summary[invs_summary$class != "Int/Rob – Oki",]
@@ -74,9 +75,11 @@ ggplot(invs_summary |> tidyr::pivot_longer(c("align", "mapped", "map2"))) +
   aes(value, pairname_s) + geom_point(aes(col = target)) +
   ggtitle ("Number of inversions found after different post-processings") +
   facet_wrap(~name, ncol= 1)
+```
 
+```{r number_of_inversions, fig.width=7, dev='svg', fig.ext='svg'}
 ggplot(invs_summary |> tidyr::pivot_longer(c("mapped"))) +
-  aes(value, pairname_s) + geom_point(aes(col = class)) +
+  aes(value, genus) + geom_point(aes(col = class)) +
   ggtitle ("Number of inversions found in mapped regions") 
 ```
 
